--- a/style.css
+++ b/style.css
@@ -388,7 +388,7 @@ span.h2pink {
 .all__prod__button button {
     width: 211px;
     height: 47px;
-    border: 1px solid #ff6a6a;
+    border: 1px solid #c24f5e;
     font-family: "Lato";
     font-style: normal;
     font-weight: 400;
